Résolution du problème d'affichage des images